--- a/Dx11L05/Dx11L05.vcxproj.filters
+++ b/Dx11L05/Dx11L05.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="DxHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Dx11L05.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="targetver.h">
