--- a/HowToDx11/HowToDx11.vcxproj
+++ b/HowToDx11/HowToDx11.vcxproj
@@ -147,7 +147,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Dx11Camera.h" />
     <ClInclude Include="Dx11Engine.h" />
+    <ClInclude Include="Dx11Model.h" />
+    <ClInclude Include="Dx11Shader.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
