Texture and Lighting

--- a/IntrDep/IntrDep.vcxproj.filters
+++ b/IntrDep/IntrDep.vcxproj.filters
@@ -13,9 +13,6 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Sharders">
-      <UniqueIdentifier>{cb7fbc20-8fab-4d0f-a0ea-35665616f6ba}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -24,25 +21,10 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="Dx11Engine.h">
+    <ClInclude Include="Resource.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="Dx11Model.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="Dx11Shader.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="Dx11Camera.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="Camera.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="Dx11Material.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="Dx11Light.h">
+    <ClInclude Include="IntrDep.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -50,21 +32,21 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="HowToDx11.cpp">
+    <ClCompile Include="IntrDep.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="VertexShader.hlsl">
-      <Filter>Sharders</Filter>
-    </FxCompile>
-    <FxCompile Include="PixelShader.hlsl">
-      <Filter>Sharders</Filter>
-    </FxCompile>
+    <ResourceCompile Include="IntrDep.rc">
+      <Filter>资源文件</Filter>
+    </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Header.hlsli">
-      <Filter>Sharders</Filter>
-    </None>
+    <Image Include="small.ico">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="IntrDep.ico">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
