--- a/HowToDx11/HowToDx11.vcxproj.filters
+++ b/HowToDx11/HowToDx11.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClInclude Include="Dx11Light.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DDSTextureLoader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="WICTextureLoader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
