--- a/HowToDx11/HowToDx11.vcxproj
+++ b/HowToDx11/HowToDx11.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="DDSTextureLoader.h" />
     <ClInclude Include="Dx11Camera.h" />
     <ClInclude Include="Dx11Engine.h" />
     <ClInclude Include="Dx11Light.h" />
@@ -156,6 +157,7 @@
     <ClInclude Include="Dx11Shader.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="WICTextureLoader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HowToDx11.cpp" />
